[package]
name = "veb-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
safety_checks = []

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
proptest = "1.0"
rand = "0.8.5"

[[bench]]
name = "successor"
harness = false
