[package]
name = "veb-tree"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
safety_checks = []

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1"
rand = "0.9"

[[bench]]
name = "successor"
harness = false
